--- a/src/main/resources/templates/home_page/header.html
+++ b/src/main/resources/templates/home_page/header.html
@@ -28,7 +28,7 @@
 			<li><a href="/teachersfront/frontList">师资队伍</a></li>
 			<li><a href="/question/list">咨询答疑</a></li>
 			<li><a href="/learningfront/learningList">学习效果</a></li>
-			<li th:if="${session.student} != null"><a href="/choose/course/list">实验大厅</a></li>
+			<li th:if="${session.student} != null"><a href="/choose/course/noList">实验大厅</a></li>
 			<li th:if="${session.teacher} != null"><a href="/learning/kuangjia">平台管理</a></li>
 		</ul>
 	</div>
