--- a/src/main/resources/templates/home_shiyan/index.html
+++ b/src/main/resources/templates/home_shiyan/index.html
@@ -1,60 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
-        <meta name="renderer" content="webkit" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>实验列表 - 旅游大数据虚拟仿真实验教学平台</title>
-        <link rel="stylesheet" href="../../static/new/css/reset.css" />
-        <link rel="stylesheet" href="../../static/new/css/experiment.css" />
-    </head>
-    <body>
-        <div class="experiment-page">
-            <div class="experiments">
-                <div class="experiment" th:each="model:${k}">
-                    <div class="exp-cover"><img th:src="${model.m_imageurl}" /></div>
-                    <div class="exp-title" th:text="${model.m_name}">这里是名称</div>
-                    <div class="exp-time"><span th:text="${#dates.format(model.getKaohe_starttime(),'yyyy-MM-dd HH:mm:ss')}">2012-12-12 12:12:12</span> - <span th:text="${#dates.format(model.getKaohe_endtime(),'yyyy-MM-dd HH:mm:ss')}">2012-12-12 12:12:12</span></div>
-                    <div class="exp-infos">
-                        <div class="exp-info">测试：<span th:text="${model.m_teststate == false }?'未完成':'已完成'"></span></div>
-                        <div class="exp-info">权重：<span th:text="${model.m_scale}"></span></div>
-                        <div class="exp-info">报告：<span th:text="${model.m_reportstate == false }?'未填写':'已填写'"></span></div>
-                        <div class="exp-info">得分：<span th:text="|${model.m_score} 分|"></span></div>
-                    </div>
-                    <div class="exp-btns">
-                        <div class="exp-btn">
-                            <a th:href="@{|/expmodel/theoryStudy/${model.m_id}|}">理论学习</a>
-                        </div>
-                        <div class="exp-btn">
-                            <a th:href="@{|/kaoshi/${model.m_id}/toExamPageList|}">模块测试</a>
-                        </div>
-                        <div class="exp-btn" th:if="${docker}!= null">
-                            <a th:href="${docker.getDc_url()}">进入实验</a>
-                        </div>
-                        <div class="exp-btn" th:if="${docker}== null">
-                            <a onclick="showmsg()">进入实验</a>
-                        </div>
-                        <div class="exp-btn" th:if="${model.report_type == false}">
-                            <a th:href="@{|/WriteReport/${model.m_id}/Timu|}">填写报告</a>
-                        </div>
-                        <div class="exp-btn" th:if="${model.report_type == true}">
-                            <a th:href="@{|/collegereport/info/${model.m_id}|}">填写报告</a>
-                        </div>
-                    </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
+    <meta name="renderer" content="webkit" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>实验列表 - 旅游大数据虚拟仿真实验教学平台</title>
+    <link rel="stylesheet" href="../../static/new/css/reset.css" />
+    <link rel="stylesheet" href="../../static/new/css/experiment.css" />
+</head>
+<body>
+<div class="experiment-page">
+    <div class="experiments">
+        <div class="experiment" th:each="model:${k}">
+            <div class="exp-cover"><img th:src="${model.m_imageurl}" /></div>
+            <div class="exp-title" th:text="${model.m_name}">这里是名称</div>
+            <div class="exp-time"><span th:text="${#dates.format(model.getKaohe_starttime(),'yyyy-MM-dd HH:mm:ss')}">2012-12-12 12:12:12</span> - <span th:text="${#dates.format(model.getKaohe_endtime(),'yyyy-MM-dd HH:mm:ss')}">2012-12-12 12:12:12</span></div>
+            <div class="exp-infos">
+                <div class="exp-info">测试：<span th:text="${model.m_teststate == false }?'未完成':'已完成'"></span></div>
+                <div class="exp-info">权重：<span th:text="${model.m_scale}"></span></div>
+                <div class="exp-info">报告：<span th:text="${model.m_reportstate == false }?'未填写':'已填写'"></span></div>
+                <div class="exp-info">得分：<span th:text="|${model.m_score} 分|"></span></div>
+            </div>
+            <div class="exp-btns">
+                <div class="exp-btn">
+                    <a th:href="@{|/expmodel/theoryStudy/${model.m_id}|}">理论学习</a>
+                </div>
+                <div class="exp-btn">
+                    <a th:href="@{|/kaoshi/${model.m_id}/toExamPageList|}">模块测试</a>
+                </div>
+                <div class="exp-btn" th:if="${docker}!= null">
+<!--                    <a th:href="${docker.getDc_url()}">进入实验</a>-->
+                    <a th:onclick="'explog('+${model.m_id}+')'">进入实验</a>
+                </div>
+                <div class="exp-btn" th:if="${docker}== null">
+                    <a onclick="showmsg()">进入实验</a>
+                </div>
+                <div class="exp-btn" th:if="${model.report_type == false}">
+                    <a th:href="@{|/WriteReport/${model.m_id}/Timu|}">填写报告</a>
+                </div>
+                <div class="exp-btn" th:if="${model.report_type == true}">
+                    <a th:href="@{|/collegereport/info/${model.m_id}|}">填写报告</a>
                 </div>
             </div>
-            <div class="experiment-pager">
-                <a th:if="${k.hasPrevious()}" th:href="@{/expmodel/kaoheModel(pageNum=${k.hasPrevious()}?${k.number}-1:0)}" class="page-btn">上一页</a>
-                <a th:if="${k.hasNext()}" th:href="@{/expmodel/kaoheModel(pageNum=${k.hasNext()}?${k.number}+1:${k.number})}" class="page-btn">下一页</a>
-            </div>
         </div>
-        <script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
-        <script src="//cdn.staticfile.org/layer/3.1.1/layer.min.js"></script>
-        <script>
-            function showmsg() {
-                layer.msg('Docker地址异常或已过期，请与管理员联系')
-            }
-        </script>
-    </body>
+    </div>
+    <div class="experiment-pager">
+        <a th:if="${k.hasPrevious()}" th:href="@{/expmodel/kaoheModelPos(pageNum=${k.hasPrevious()}?${k.number}-1:0)}" class="page-btn">上一页</a>
+        <a th:if="${k.hasNext()}" th:href="@{/expmodel/kaoheModelPos(pageNum=${k.hasNext()}?${k.number}+1:${k.number})}" class="page-btn">下一页</a>
+    </div>
+</div>
+<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+<script src="//cdn.staticfile.org/layer/3.1.1/layer.min.js"></script>
+<script th:inline="javascript">
+    var varrangeId = [[${arrangeId}]]
+    function showmsg() {
+        layer.msg('Docker地址异常或已过期，请与管理员联系')
+    }
+    function explog(e) {
+        $.get('/expmodel/expLog',{arrangeId:varrangeId,expId:e}, function (data) {
+            console.log(varrangeId)
+            console.log(e)
+        });
+
+        // window.location.href = DockerUrl;
+        window.location.href = [[${docker.getDc_url()}]];
+        // window.location.replace(DockerUrl);
+
+    }
+</script>
+</body>
 </html>
