--- a/src/main/resources/templates/jichu/timetable_update.html
+++ b/src/main/resources/templates/jichu/timetable_update.html
@@ -70,6 +70,12 @@
 						<input type="text" name="courseIntruduce" th:value="${courseInfo.getCourseIntruduce()}" lay-verify="required" placeholder="请输入课程介绍" autocomplete="off" class="layui-input" />
 					</div>
 				</div>
+				<div class="layui-form-item layui-form-text">
+					<label class="layui-form-label">课程目的:</label>
+					<div class="layui-input-block">
+						<script id="editor1" name="courseObjective" th:utext="${courseInfo.getCourseObjective()}" type="text/plain"></script>
+					</div>
+				</div>
 				<div class="layui-form-item">
 					<div class="layui-input-block">
 						<button type="submit" class="layui-btn" lay-filter="do" lay-submit>修改完成</button>
@@ -80,10 +86,14 @@
 		</div>
 		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
 		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script src="../../static/ueditor/ueditor.config.js"></script>
+		<script src="../../static/ueditor/ueditor.all.min.js"></script>
+		<script src="../../static/ueditor/lang/zh-cn/zh-cn.js"></script>
 		<script>
 			$(function () {
 				var index = parent.layer.getFrameIndex(window.name)
 				var form = layui.form
+				UE.getEditor('editor1', { initialFrameHeight: 400 })
 				form.on('submit(do)', function () {
 					parent.layer.close(index)
 				})
