--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -37,7 +37,7 @@
 									</shiro:hasRole>
 									<shiro:hasRole name="courseleader">
 										<dl class="layui-nav-child">
-											<dd><a class="to-url" data-url="/teachers/list" href="javascript:;">师资队伍</a></dd>
+											<dd><a class="to-url" data-url="/teachers/list/-1" href="javascript:;">师资队伍</a></dd>
 											<dd><a class="to-url" data-url="/learning/list" href="javascript:;">学习效果</a></dd>
 										</dl>
 									</shiro:hasRole>
@@ -102,7 +102,13 @@
 							</shiro:hasRole>
 							<shiro:hasRole name="admin">
 								<li class="layui-nav-item">
-									<a class="to-url" data-url="monitor"><i class="layui-icon layui-icon-console"></i>平台服务监控</a>
+									<a class="to-url" data-url="https://172.17.55.210:3000"><i class="layui-icon layui-icon-console"></i>平台服务监控</a>
+								</li>
+								<li class="layui-nav-item">
+									<a class="to-url" data-url="http://172.17.55.54:32567"><i class="layui-icon layui-icon-console"></i>集群资源监控</a>
+								</li>
+								<li class="layui-nav-item">
+									<a class="to-url" data-url="/log/list"><i class="layui-icon layui-icon-console"></i>日志</a>
 								</li>
 							</shiro:hasRole>
 						</ul>
@@ -126,6 +132,7 @@
 					if ($(this).data('url')) {
 						if ($(this).data('url') == 'monitor') {
 							$('#iframe').attr('src', 'about:blank')
+							// $('#iframe').attr('src', 'https://172.17.55.210:3000')
 							$('#iframe').hide()
 							$('#monitor').css('z-index', 10)
 							$('#monitor').css('visibility', 'visible')
@@ -134,6 +141,7 @@
 							$('#monitor').css('visibility', 'hidden')
 							$('#iframe').show()
 							$('#iframe').attr('src', $(this).data('url'))
+							console.log("src:", $(this).data('url'))
 						}
 					}
 				})
