--- a/src/main/resources/templates/home_page/index_new.html
+++ b/src/main/resources/templates/home_page/index_new.html
@@ -88,6 +88,11 @@
             height: 570px;
             width: 31%;
         }
+        .gri1 img{
+            width: 100%;
+            height: 300px;
+
+        }
     </style>
 </head>
 <body>
