--- a/src/main/resources/templates/home_page/aboutClass(1).html
+++ b/src/main/resources/templates/home_page/aboutClass(1).html
@@ -142,27 +142,24 @@
                 <div class="layui-col-md12">
                     <div class="layui-card">
                         <div class="layui-row layui-col-space20">
-                            <div class="layui-col-md7">
+                            <div class="layui-col-md8">
                                 <div class="layui-card-header name" th:text="${courseInfo.getCourseName()}">数据库课程</div>
                                 <div class="layui-card-body">
                                     <span th:text="${participantsNum + CompleteNum}+'人学习过'">参与人数：200人</span>
                                     <span th:text="'当前参与人数：'+${participantsNum}+'人'">参与人数：200人</span>
                                     <span th:text="'完成人数：' +${CompleteNum} + '人'">完成人数：190人</span>
                                     <span th:text="'负责人：'+${courseInfo.getTeacherId()}">负责人：李千</span>
-
+                                </div>
+                                <div class="introduce" th:text="${courseInfo.getCourseIntruduce()}">
+                                    你好啊这门课程讲的是什么，鬼知道，太耐了aaaaa
+                                    你好啊这门课程讲的是什么，鬼知道，太耐了aaaaa
+                                    你好啊这门课程讲的是什么，鬼知道，太耐了aaaaa
                                 </div>
                             </div>
 
-                            <div class="layui-col-md5">
-                                <img th:src="@{'/upload/'+${courseInfo.getCourseImgurl()}}" alt="" style="width: 60%;height:100px">
+                            <div class="layui-col-md2 layui-col-xs-offset1">
+                                <img th:src="@{'/upload/'+${courseInfo.getCourseImgurl()}}" alt="" style="width: 125px;height:150px">
                             </div>
-
-                        </div>
-
-                        <div class="introduce" th:text="${courseInfo.getCourseIntruduce()}">
-                            你好啊这门课程讲的是什么，鬼知道，太耐了aaaaa
-                            你好啊这门课程讲的是什么，鬼知道，太耐了aaaaa
-                            你好啊这门课程讲的是什么，鬼知道，太耐了aaaaa
                         </div>
                     </div>
                 </div>
