--- a/src/main/resources/templates/kuangjia/shiyan.html
+++ b/src/main/resources/templates/kuangjia/shiyan.html
@@ -78,7 +78,7 @@
     })
 
     // 检测页面关闭
-    window.addEventListener('unload', logData, false);
+    // window.addEventListener('unload', logData, false);
 
     function logData() {
         navigator.sendBeacon('/learningend');
