pdf修改，首页成绩查询sql修改

--- a/src/main/resources/templates/home_page/index_new.html
+++ b/src/main/resources/templates/home_page/index_new.html
@@ -573,9 +573,9 @@
                     show: false
                 },
                 data: [
-                    {value: parseInt('[[${excellentstu}]]'), name: '高',itemStyle: { color: '#FF6C91' }},
-                    {value: parseInt('[[${qualifiedstu}]]'), name: '中',itemStyle: { color: '#36A2EB' }},
-                    {value: parseInt('[[${unqualifiedstu}]]'), name: '低',itemStyle: { color: '#9966FF' }},
+                    {value: parseInt('[[${obj[2]}]]'), name: '高',itemStyle: { color: '#FF6C91' }},
+                    {value: parseInt('[[${obj[1]}]]'), name: '中',itemStyle: { color: '#36A2EB' }},
+                    {value: parseInt('[[${obj[0]}]]'), name: '低',itemStyle: { color: '#9966FF' }},
                 ]
             }
         ]
