--- a/src/main/resources/templates/home_page/index_new.html
+++ b/src/main/resources/templates/home_page/index_new.html
@@ -539,7 +539,7 @@
 
     myChart4.setOption({
         title: {
-            text: '成绩总数：[[${allpasspeople}]]份',
+            text: '成绩总数：'+(parseInt('[[${obj[0]}]]')+parseInt('[[${obj[1]}]]')+parseInt('[[${obj[2]}]]'))+'份',
             left: 'center'
         },
         tooltip: {
